// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApproveTransactionHeader should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#848c96",
        "borderRadius": 99,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 16,
        "paddingVertical": 8,
      }
    }
    testID="APPROVAL_TAG_URL_ORIGIN_PILL"
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 16,
          "height": 24,
          "marginRight": 8,
          "overflow": "hidden",
          "width": 24,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          {
            "uri": "",
          }
        }
        style={
          {
            "flex": 1,
            "height": undefined,
            "width": undefined,
          }
        }
        testID="favicon-avatar-image"
      />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#6a737d",
          "flexShrink": 1,
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      https://metamask.github.io
    </Text>
  </View>
  <TouchableOpacity
    style={
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#848c96",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "padding": 16,
      }
    }
    testID="account-balance"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
      testID="account-base"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="account-avatar"
            >
              <View
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "backgroundColor": "#C7144F",
                      "borderRadius": 16,
                      "height": 32,
                      "width": 32,
                    },
                    undefined,
                  ]
                }
              >
                <RNSVGSvgView
                  bbHeight={32}
                  bbWidth={32}
                  focusable={false}
                  height={32}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 32,
                        "width": 32,
                      },
                    ]
                  }
                  width={32}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  >
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4294711651,
                          "type": 0,
                        }
                      }
                      height={32}
                      matrix={
                        [
                          0.46329603511986217,
                          0.8862035792312145,
                          -0.8862035792312145,
                          0.46329603511986217,
                          29.06767649409735,
                          -8.290603334655817,
                        ]
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4280576225,
                          "type": 0,
                        }
                      }
                      height={32}
                      matrix={
                        [
                          -0.5778576243835052,
                          0.8161375900801603,
                          -0.8161375900801603,
                          -0.5778576243835052,
                          51.62016714634118,
                          17.239003094412087,
                        ]
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4278407261,
                          "type": 0,
                        }
                      }
                      height={32}
                      matrix={
                        [
                          0.7046342099635947,
                          -0.7095707365365209,
                          0.7095707365365209,
                          0.7046342099635947,
                          -25.225718686778755,
                          -4.611026307883787,
                        ]
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001A",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#141618",
                "fontFamily": "EuclidCircularB-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
              }
            }
          >
            Sepolia
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Bold",
                  "fontSize": 14,
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Account 1
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginLeft": "auto",
            }
          }
        >
          Balance
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Bold",
              "fontSize": 14,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`ApproveTransactionHeader should return origin to be null when not present 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    style={
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#848c96",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "padding": 16,
      }
    }
    testID="account-balance"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
      testID="account-base"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="account-avatar"
            >
              <View
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "backgroundColor": "#C7144F",
                      "borderRadius": 16,
                      "height": 32,
                      "width": 32,
                    },
                    undefined,
                  ]
                }
              >
                <RNSVGSvgView
                  bbHeight={32}
                  bbWidth={32}
                  focusable={false}
                  height={32}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      {
                        "flex": 0,
                        "height": 32,
                        "width": 32,
                      },
                    ]
                  }
                  width={32}
                >
                  <RNSVGGroup
                    fill={
                      {
                        "payload": 4278190080,
                        "type": 0,
                      }
                    }
                  >
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4294711651,
                          "type": 0,
                        }
                      }
                      height={32}
                      matrix={
                        [
                          0.46329603511986217,
                          0.8862035792312145,
                          -0.8862035792312145,
                          0.46329603511986217,
                          29.06767649409735,
                          -8.290603334655817,
                        ]
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4280576225,
                          "type": 0,
                        }
                      }
                      height={32}
                      matrix={
                        [
                          -0.5778576243835052,
                          0.8161375900801603,
                          -0.8161375900801603,
                          -0.5778576243835052,
                          51.62016714634118,
                          17.239003094412087,
                        ]
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={
                        {
                          "payload": 4278407261,
                          "type": 0,
                        }
                      }
                      height={32}
                      matrix={
                        [
                          0.7046342099635947,
                          -0.7095707365365209,
                          0.7095707365365209,
                          0.7046342099635947,
                          -25.225718686778755,
                          -4.611026307883787,
                        ]
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001A",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#141618",
                "fontFamily": "EuclidCircularB-Regular",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
              }
            }
          >
            Sepolia
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Bold",
                  "fontSize": 14,
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Account 1
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginLeft": "auto",
            }
          }
        >
          Balance
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Bold",
              "fontSize": 14,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;
